--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "caouecs/laravel-lang": "~4.0",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
+        "kyslik/column-sortable": "^6.2",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.2"
